--- a/BOP/ch01/item01/Makefile
+++ b/BOP/ch01/item01/Makefile
@@ -1,36 +1,31 @@
 #显示所有警告
-CXXFLAGS += -Wall -Wextra -std=c++11
-#CXXFLAGS +=  -Werror -Wfatal-errors
+CXXFLAGS += -Wall -Wextra 
+#CXXFLAGS +=  -Werror -Wfatal-errors -std=c++11
 #-std=c++0x
 #CFLAG += -O #基本优化
 # -g选项，产生供gdb调试用的可执行文件
-CC = g++
+CC = gcc
 
 PROJECT = main
 SYSLIB = 
 
 OBJDIR = .
 #SRCS = $(wildcard ./*.c)
-SRCDIR = item03
-SRCS = $(SRCDIR)/CPrefixSorting.cpp
-
+SRCS = main_11.c
 
 
  #指定头文件目录，代码中就不需要把头文
 INCLUDE_DIRS = -I. 
-OBJS = $(patsubst %.cpp,%.o,$(SRCS))
+OBJS = $(patsubst %.c,%.o,$(SRCS))
 
 $(PROJECT):$(OBJS)
 	$(CC) -o $@ $^ $(CXXFLAGS) $(SYSLIB)
 #	mv $(OBJS_BASE) $(OBJDIR)
-$(OBJS):%.o:%.cpp
+$(OBJS):%.o:%.c
 	$(CC) -c $(CXXFLAGS) $< -o $@ $(INCLUDE_DIRS)
-
-test:test.cpp
-	$(CC) $(CXXFLAGS) test.cpp -o main	
 .PHONY: clean
 clean:
-	rm -f $(OBJDIR)/*.o  $(SRCDIR)/*.o $(PROJECT)
+	rm -f $(OBJDIR)/*.o $(PROJECT)
 
 
 # SRC = test.cpp 
