add chapter three

--- a/HFDP/code/Makefile
+++ b/HFDP/code/Makefile
@@ -59,9 +59,13 @@ CC = g++
 #INCLUDE = -I./simple/
 
 # SRC = ./strategy/demoduck.cpp
-SRC = ./strategy/strategy_refactoringguru.cpp
+# SRC = ./strategy/strategy_refactoringguru.cpp
+
 # SRC = ./observer/observer.cpp
 # SRC = ./observer/observer_refactoringguru.cpp
+
+# SRC = ./decorator/beverage.cpp
+SRC = ./decorator/decorator_refactoringguru.cpp
 
 main:$(SRC)
 	$(CC) $(CXXFLAGS)  $(SRC) -o main
